--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* CTA-BUTTONS */
+.connectWalletBtn {
+  @apply scale-100 rounded-md bg-yellow-300 px-[1em] py-2 font-bold transition-all hover:bg-yellow-400 active:scale-95;
+}
+
+.disconnectWalletBtn {
+  @apply scale-100 rounded-md bg-slate-200 px-[1em] py-2 font-semibold transition-all hover:bg-slate-300 active:scale-95;
+}
+
+.pri-cta-btn {
+  @apply scale-100 rounded-md bg-indigo-400 px-[1em] py-2 font-bold transition-all hover:bg-indigo-500 active:scale-95;
+}
