--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,27 @@
 .pri-cta-btn {
   @apply scale-100 rounded-md bg-indigo-400 px-[1em] py-2 font-bold transition-all hover:bg-indigo-500 active:scale-95;
 }
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  @apply bg-slate-300;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  @apply bg-slate-500;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-slate-600;
+}
