--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@
 }
 
 /* Scrollbar */
-
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -37,4 +36,9 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   @apply bg-slate-600;
+}
+
+/* Table Formatting */
+.table-header {
+  @apply py-[1em] text-[1rem] font-semibold;
 }
